# GeneticEvolution

./: CMakeLists.txt  README.md  main.cpp  matrix.hpp
genetic/: genetic.hpp
gmatrix/: matrix.hpp
